                   adding the gate.. which can throw an uncaught exception.
                   Thanks to Kevin Carnes KSU for stepping into this defect
                   and alerting me to it.
                 - Added Kevin Carnes and Dirk Weisshaar to the acknowledgements.
June 5, 2008     - Fix typeo in BufferAnalysis.h

July 11, 2008    - Gui/slice.tcl - re-init the browser on accepting a gate (reinit member)
                   that restores the parameters used to the list.
                 - Expose the treeview interface to clients of 
                   Gui/browser.tcl
August 18, 2008  - Update to tkcon V2.4
September 17, 2008 
                 - Fixed error in RunState handling.. Set it to
                   "Inactive" on event source EOF.  This is needed to
 		   support batchmode processing of e.g. filter files.
September 26, 2008
                 - backport capability to integrate superpositions as well
                   as the base spectrum.
3.2-002
Feb 18, 2009    - Xamine button bar background -> black on test installs.
March 18, 2009  - tkcon.tcl - rename clear command to tkconclear so it does not
                  interfere with SpecTcl's clear command.
3.2-003
May 1, 2009     - CSpectrum2Dm.{h,cpp}  Ensure these spectra get put in the
                  don't need a parameter list rather than some need a parameter list
                  which causes them to be grossly underincremented.
May 1, 2009     - Complete a raft of editing so that SpecTcl compiles and runs
                  with minimal error messages on debian lenny...really 
		  Debina g++-4.3.2-1.1
May 20, 2009    - Fix sourcing from new gui.. was stripping newlines from multiline
                  definintions (e.g. psuedos). which caused them to fail.
May 27, 2009    - Fix an error in the handling of contours on gamma spectra
 August 13, 2009 - Fix error in Strip chart spectrum was not requiring
                   that target parameter was defined.                  